--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
           <li><a href="#">Blog</a></li>
           <li><a href="#">Press</a></li>
         </ul>
-        <h3 class="text-muted">A New Startup</h3>
+        <h3 class="text-muted">Professor Bell's Cloud Computing Course</h3>
       </div>
 	  <% if (flask_debug === 'true') { %>
       <div class="alert alert-danger">
@@ -43,8 +43,8 @@
         <p id="signupErrorText">Well this is embarrassing. It looks like we're having trouble getting you on the list.</p>
       </div>
       <div class="jumbotron">
-        <h1>The next big thing is coming...</h1>
-        <p class="lead">We're pretty thrilled to unveil our latest creation. Sign up below to be notified when we officially launch!</p>
+        <h1>My first website using Node JS in AWS...</h1>
+        <p class="lead">Sign up below to be notified when we officially launch!</p>
         <p><a class="btn btn-lg btn-success"  data-toggle="modal" href="#signupModal">Sign up today</a></p>
       </div>
 
